# mfdp

./: .env.example  .gitignore  Dockerfile  Taskfile.yml  baseline.ipynb  docker-compose.yml  improved.ipynb  product_description.md  pyproject.toml  run_estimator.py  runner.py
alembic/: env.py
alembic/versions/: 0164bb7e4683_add_separate_summary_field_to_resume_.py  16b0f5c0ff39_add_more_resume_fields.py  2645a37e0da4_user_preferred_work_type.py  2d46b246a111_add_salary_fields.py  4e1455dfd9f9_add_role_field.py  64fc4e427bc4_init.py  7c3f5bb2d3d4_resume_estimated_salary.py  96b3494740cd_add_new_vacancy_fields.py  a5b64c04be44_add_requirements_embedding_field.py  c55368ca8ea7_add_embedding_fields_to_resume.py  c6833f688786_add_company_manager.py  dc628b7dca36_status_and_location_fields_in_job_.py  ea0f53053820_pg_queuer_schema.py
app/: main.py
app/core/: __init__.py  config.py  database.py  salary_config.py  telegram.py
app/models/: __init__.py  company.py  job_seeker.py  manager.py  resume.py  vacancy.py
app/repositories/: __init__.py  base.py  company.py  job_seeker.py  manager.py  resume.py  session_manager.py  vacancy.py
app/services/: __init__.py  company.py  gemini.py  location_detector.py  resume_extractor.py  salary_predictor.py
app/telegram/: bot.py
app/web/: app.py
app/web/templates/: base.html  (+4 more)
app/workers/: __init__.py  embeddings.py  extractor.py  models.py  resume_salary_estimator.py  scheduler.py  vacancy_embeddings.py  vacancy_salary_estimator.py  worker.py
config/: salary_percentiles.yaml
docs/: README.md
nginx/: nginx.conf
(+2 files in other folders)
