[project]
name = "mfdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.1",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "catboost>=1.2.7",
    "fastapi>=0.115.0",
    "greenlet>=3.1.1",
    "pgqueuer>=0.9.2",
    "pgvector>=0.3.5",
    "pydantic>=2.9.2",
    "ruff>=0.6.9",
    "sentence-transformers>=3.1.1",
]
